non-prod/base/networking/np-acme-certmanager.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-acme-http01-solver
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  ingress:
  - ports:
    - port: 8089
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          name: admin
      podSelector:
        matchLabels:
          app: traefik
