non-prod/base/networking/np-allow-all-namespace-internal.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-allow-all-namespace-internal
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
