non-prod/base/networking/np-allow-dhc-toolbox-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-allow-dhc-toolbox-ingress
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - ports:
        - port: 80 
          protocol: TCP
          
        - port: 443 
          protocol: TCP
          
        - port: 8080 
          protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
            name: admin
      podSelector:
        matchLabels:
            app: dhc-toolbox
