non-prod/base/networking/np-allow-incoming-traefik-for-dashboard-proxy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-allow-incoming-traefik-for-dashboard-proxy
spec:
  podSelector:
    matchLabels:
      app: dashboard-proxy
  ingress:
  - ports:
    - port: 8080
    from:
    - namespaceSelector:
        matchLabels:
          name: admin
      podSelector:
        matchLabels:
          app: traefik
