non-prod/base/networking/np-allow-traefik-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-allow-traefik-ingress
spec:
  podSelector:
    matchLabels:
      port-8080: incoming-traefik-8080
  ingress:
  - ports:
    - port: 8080
    from:
    - namespaceSelector:
        matchLabels:
          name: admin
      podSelector:
        matchLabels:
          app: traefik
